# lambdapipeline

./: Cargo.toml  Makefile  README.md
ci/: lambda.yml
src/: handler.rs
